fix(mobile): resolve text wrap error in outfit form

--- a/client/src/styles/OutfitForms.module.scss
+++ b/client/src/styles/OutfitForms.module.scss
@@ -322,4 +322,9 @@ label,
       text-wrap: nowrap;
     }
   }
+
+  .input .btnSec,
+  .input .btnSec:disabled {
+    text-wrap: nowrap;
+  }
 }
